// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe when the TicketList Component is given showAddTicketDialog as false TicketList should show the addTicketDialog open as false 1`] = `
<div>
  <WithStyles(Button)
    onClick={[Function]}
    title="Add Ticket"
  >
     Add Ticket 
  </WithStyles(Button)>
  <h1>
    Open
  </h1>
  <TicketTable
    onAddTicketToSprint={[Function]}
    onDelete={[Function]}
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "description",
          "storyPoint": 3,
          "title": "ticketTitle",
        },
      ]
    }
  />
  <h1>
    Closed
  </h1>
  <TicketTable
    tickets={Array []}
  />
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    open={false}
  />
</div>
`;

exports[`describe when the TicketList Component is given showAddTicketDialog as true TicketList should show the addTicketDialog open as true 1`] = `
<div>
  <WithStyles(Button)
    onClick={[Function]}
    title="Add Ticket"
  >
     Add Ticket 
  </WithStyles(Button)>
  <h1>
    Open
  </h1>
  <TicketTable
    onAddTicketToSprint={[Function]}
    onDelete={[Function]}
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "description",
          "storyPoint": 3,
          "title": "ticketTitle",
        },
      ]
    }
  />
  <h1>
    Closed
  </h1>
  <TicketTable
    tickets={Array []}
  />
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    open={true}
  />
</div>
`;
